fix styling of movies covered

--- a/src/component/MovieData/MovieData.scss
+++ b/src/component/MovieData/MovieData.scss
@@ -1,5 +1,16 @@
-img {
+.zg-movie-poster {
     margin-top: 10px;
-    height: 150px;
-    max-width: 100%;
+    height: 250px;
+    width: 169px;
+    border-radius: 4px;
 }
+
+.zg-movie-title {
+    margin: auto;
+    padding: 5px 0;
+    top: 15%;
+    width: 80%;
+    height: 50%;
+    color: white;
+    overflow: hidden;
+  }
