--- a/src/component/MoviesCovered/MoviesCovered.scss
+++ b/src/component/MoviesCovered/MoviesCovered.scss
@@ -7,18 +7,13 @@
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
       0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    background: white;
+    background: rgb(155, 155, 155);
     width: 200px;
-    // height: 50px;
+    height: 310px;
     margin: 10px 0 0 0;
-    .zg-movie-title {
-      margin: auto;
-      padding: 5px 0;
-      position: relative;
-      top: 15%;
-      width: 80%;
-      height: 50%;
-    }
+  }
+  .zg-movie:hover {
+    cursor: pointer;
   }
 }
 
